--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "@react-navigation/stack": "^5.12.8",
     "react": "16.13.1",
     "react-native": "0.63.4",
+    "react-native-actions-sheet": "^0.4.2",
     "react-native-confirmation-code-input": "^1.0.4",
     "react-native-gesture-handler": "^1.9.0",
     "react-native-intl-phone-input": "^1.2.26",
     "react-native-maps": "0.27.1",
     "react-native-modal": "^11.7.0",
+    "react-native-range-slider": "^0.1.2",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.15.0",
