--- a/ios/POPPINS.xcodeproj/xcshareddata/xcschemes/POPPINS-tvOS.xcscheme
+++ b/ios/POPPINS.xcodeproj/xcshareddata/xcschemes/POPPINS-tvOS.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
-               BuildableName = "Prox-tvOS.app"
-               BlueprintName = "Prox-tvOS"
-               ReferencedContainer = "container:Prox.xcodeproj">
+               BuildableName = "POPPINS-tvOS.app"
+               BlueprintName = "POPPINS-tvOS"
+               ReferencedContainer = "container:POPPINS.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "2D02E48F1E0B4A5D006451C7"
-               BuildableName = "Prox-tvOSTests.xctest"
-               BlueprintName = "Prox-tvOSTests"
-               ReferencedContainer = "container:Prox.xcodeproj">
+               BuildableName = "POPPINS-tvOSTests.xctest"
+               BlueprintName = "POPPINS-tvOSTests"
+               ReferencedContainer = "container:POPPINS.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
-            BuildableName = "Prox-tvOS.app"
-            BlueprintName = "Prox-tvOS"
-            ReferencedContainer = "container:Prox.xcodeproj">
+            BuildableName = "POPPINS-tvOS.app"
+            BlueprintName = "POPPINS-tvOS"
+            ReferencedContainer = "container:POPPINS.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
-            BuildableName = "Prox-tvOS.app"
-            BlueprintName = "Prox-tvOS"
-            ReferencedContainer = "container:Prox.xcodeproj">
+            BuildableName = "POPPINS-tvOS.app"
+            BlueprintName = "POPPINS-tvOS"
+            ReferencedContainer = "container:POPPINS.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
