--- a/ios/POPPINS/Info.plist
+++ b/ios/POPPINS/Info.plist
@@ -78,6 +78,9 @@
 		<string>SFProDisplay-Semibold.ttf</string>
 		<string>SFProText-Bold.ttf</string>
 		<string>SFProText-Regular.ttf</string>
+		<string>Roboto_medium.ttf</string>
+		<string>Roboto.ttf</string>
+		<string>rubicon-icon-font.ttf</string>
 	</array>
 </dict>
 </plist>
