--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/material-top-tabs": "^5.3.10",
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
+    "native-base": "^2.15.2",
     "react": "16.13.1",
     "react-native": "0.63.4",
     "react-native-actions-sheet": "^0.4.2",
@@ -24,6 +25,7 @@
     "react-native-gesture-handler": "^1.9.0",
     "react-native-google-places-autocomplete": "^2.1.3",
     "react-native-intl-phone-input": "^1.2.26",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-maps": "0.27.1",
     "react-native-modal": "^11.7.0",
     "react-native-reanimated": "^1.13.2",
