--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
     "native-base": "^2.15.2",
+    "radio-buttons-react-native": "^1.0.4",
     "react": "16.13.1",
     "react-native": "0.63.4",
     "react-native-actions-sheet": "^0.4.2",
