--- a/ios/POPPINS/Info.plist
+++ b/ios/POPPINS/Info.plist
@@ -24,6 +24,10 @@
 	<string>????</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>POPPINS need access to your photos</string>
+	<key>NSCameraUsageDescription</key>
+	<string>POPPINS need access to your camera</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSAppTransportSecurity</key>
