--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-confirmation-code-input": "^1.0.4",
     "react-native-gesture-handler": "^1.9.0",
     "react-native-google-places-autocomplete": "^2.1.3",
+    "react-native-image-crop-picker": "^0.36.0",
     "react-native-intl-phone-input": "^1.2.26",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-maps": "0.27.1",
