--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-linear-gradient": "^2.5.6",
     "react-native-maps": "0.27.1",
     "react-native-modal": "^11.7.0",
+    "react-native-option-menu": "^1.1.3",
     "react-native-parallax-scroll-view": "^0.21.3",
     "react-native-ratings": "^7.4.0",
     "react-native-reanimated": "^1.13.2",
