--- a/ios/Podfile
+++ b/ios/Podfile
@@ -23,10 +23,10 @@ target 'POPPINS' do
   #
   # Note that if you have use_frameworks! enabled, Flipper will not work and
   # you should disable these next few lines.
-  use_flipper!
-  post_install do |installer|
-    flipper_post_install(installer)
-  end
+#  use_flipper!({ 'Flipper' => '0.74.0' })
+#  post_install do |installer|
+#    flipper_post_install(installer)
+#  end
 end
 
 target 'POPPINS-tvOS' do
